--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -30,7 +30,7 @@ a {
   box-sizing: border-box;
   width: 100%;
   padding: 1rem;
-  background: white;
+  background: #fff8e6;
 
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
 
